kubernetes/standard/middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: services-strip
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/customer
      - /api/vet
      - /api/visit
      - /api/gateway
